--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2018"
 [dependencies]
 git2 = "0.13.9"
 dirs = "3.0.1"
-config = "0.10.1"
+serde = { version = "1.0.115", features = ["derive"] }
+toml = "0.5.6"
