--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ git2 = "0.13.9"
 dirs = "3.0.1"
 serde = { version = "1.0.115", features = ["derive"] }
 toml = "0.5.6"
+cursive = { version = "0.15.0", features = ["crossterm-backend", "toml"] }
