--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ dirs = "3.0.1"
 serde = { version = "1.0.115", features = ["derive"] }
 toml = "0.5.6"
 cursive = { version = "0.15.0", features = ["crossterm-backend", "toml"] }
+url = { version = "2.1.1", features = ["serde"] }
+repo-cli = "0.1.2"
