--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "commit-email"
 version = "0.1.0"
 authors = ["Marvin König <dev@mkqavi.com>"]
+license = "MIT"
+description = "A tool that reminds you to commit with the correct email address"
+repository = "https://github.com/mkqavi/commit-email"
+readme = "README.md"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
