--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-git2 = "0.13.25"
+git2 = "0.18.1"
 dirs = "5.0.1"
 serde = { version = "1.0.188", features = ["derive"] }
 toml = "0.8.2"
-cursive = { version = "0.20.0", features = ["crossterm-backend", "toml"], default_features = false }
+cursive = { version = "0.20.0", features = [
+  "crossterm-backend",
+  "toml",
+], default_features = false }
 url = { version = "2.4.1", features = ["serde"] }
-repo-cli = "0.1.3"
 anyhow = "1.0.75"
+regex = "1.10.0"
