--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ toml = "0.8.15"
 cursive = { version = "0.20.0", features = [
     "crossterm-backend",
     "toml",
-], default_features = false }
+], default-features = false }
 url = { version = "2.5.2", features = ["serde"] }
 anyhow = "1.0.86"
 regex = "1.10.5"
